// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducer action RECEIVE_USERS should add list of users 1`] = `
Object {
  "isFetching": false,
  "isLoaded": true,
  "list": Array [
    Object {
      "user": "1",
    },
    Object {
      "user": "2",
    },
  ],
  "selectedUser": Object {},
}
`;

exports[`users reducer should have default values that match snapshot 1`] = `
Object {
  "isFetching": false,
  "isLoaded": false,
  "list": Array [],
  "selectedUser": Object {},
}
`;
